--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="shortcut icon" href="https://developer.android.com/static/images/cluster-illustrations/controllers.svg?hl=pt-br" type="image/x-icon">
+	<link rel="shortcut icon"
+		href="https://developer.android.com/static/images/cluster-illustrations/controllers.svg?hl=pt-br"
+		type="image/x-icon">
 	<title>Loading...</title>
 </head>
 
@@ -14,6 +16,24 @@
 	<div class="containerImg">
 		<img>
 		<p></p>
+	</div>
+
+	<div class="containerDanger">
+		<svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" fill="currentColor"
+			class="bi bi-exclamation-triangle" viewBox="0 0 16 16">
+			<path
+				d="M7.938 2.016A.13.13 0 0 1 8.002 2a.13.13 0 0 1 .063.016.146.146 0 0 1 .054.057l6.857 11.667c.036.06.035.124.002.183a.163.163 0 0 1-.054.06.116.116 0 0 1-.066.017H1.146a.115.115 0 0 1-.066-.017.163.163 0 0 1-.054-.06.176.176 0 0 1 .002-.183L7.884 2.073a.147.147 0 0 1 .054-.057zm1.044-.45a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566z" />
+			<path
+				d="M7.002 12a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 5.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995z" />
+		</svg>
+		<p>NÃO USE O MOUSE NEM O TECLADO DURANTE O CARREGAMENTO, O USO ANTES DO CARREGAMENTO PODE IMPLICAR EM MAL FUNCIONAMENTO DO APP!</p>
+		<svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" fill="currentColor"
+			class="bi bi-exclamation-triangle" viewBox="0 0 16 16">
+			<path
+				d="M7.938 2.016A.13.13 0 0 1 8.002 2a.13.13 0 0 1 .063.016.146.146 0 0 1 .054.057l6.857 11.667c.036.06.035.124.002.183a.163.163 0 0 1-.054.06.116.116 0 0 1-.066.017H1.146a.115.115 0 0 1-.066-.017.163.163 0 0 1-.054-.06.176.176 0 0 1 .002-.183L7.884 2.073a.147.147 0 0 1 .054-.057zm1.044-.45a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566z" />
+			<path
+				d="M7.002 12a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 5.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995z" />
+		</svg>
 	</div>
 
 	<div class="progress"></div>
@@ -26,6 +46,26 @@
 			display: flex;
 			align-items: center;
 			justify-content: center;
+		}
+
+		.containerDanger {
+			position: fixed;
+			top: 5px;
+			background-color: red;
+			width: 80%;
+			padding: 5px 10px;
+			border-radius: 25px;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			gap: 15px;
+			text-align: center;
+			font-weight: bold;
+		}
+
+		.containerDanger svg {
+			color: yellow;
+			margin-left: 10px;
 		}
 
 		.containerImg {
@@ -78,8 +118,18 @@
 	</style>
 </body>
 <script>
+	let svgDanger = document.querySelectorAll('svg')
 	let randomImg = document.querySelector('img')
 	let randomText = document.querySelector('p')
+
+	setInterval(() => {
+		svgDanger[0].style.scale = 1.1
+		svgDanger[1].style.scale = 1.1
+	}, 100);
+	setInterval(() => {
+		svgDanger[0].style.scale = 0.95
+		svgDanger[1].style.scale = 0.95
+	}, 200);
 
 	imagens = [
 		"https://i.ibb.co/MnX9B6b/2023-05-04-18db77e4-ecb6-2472-dbb7-11ba76d4bf7f-f363a296-3892-4f06-ad80-28702a0d7b6f-front.jpg",
